...
    
    private let uploadImageLabel: UILabel = {
       let label = UILabel()
        label.font = .systemFont(ofSize: 25, weight: .bold)
        label.textAlignment = .center
        label.textColor = .white
        label.text = "Upload New Event Image"
        return label
    }()
    
     lazy var newEventImageView: UIImageView = {
        let imageView = UIImageView()
         imageView.contentMode = .scaleAspectFill
...
    
    private let uploadVideoLabel: UILabel = {
       let label = UILabel()
        label.font = .systemFont(ofSize: 20, weight: .bold)
        label.textAlignment = .center
        label.textColor = .white
        label.text = "Upload New Event Video (Optional)"
        return label
    }()
    
    lazy var videoPlayerView: UIView = {
        let videoView = UIView()
        let tap = UITapGestureRecognizer(target: self, action: #selector(didTapVideoPlayerView))
...
