...
        view.setDimensions(height: 60, width: 60)
        return view
    }()
    
    private lazy var addEventButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "add"
        button.setDimensions(height: 60, width: 60)
        button.setImage(UIImage(systemName: "plus")?.withRenderingMode(.alwaysTemplate), for: .normal)
        button.tintColor = .white
        button.backgroundColor = UIColor.primaryBlue
        button.addTarget(self, action: #selector(didTapShowEventButton), for: .touchUpInside)
        return button
...
